# shopware_api_parse

./: .gitignore  README.md  codex.patch  codex_clean.patch  config.yml  pyproject.toml
SRC/shopware_bmecat/: __init__.py  bmecat.py  cli.py  config.py  importer.py  logging_utils.py  ndjson.py  shopware.py
Tests/: conftest.py  test_parsing.py  test_pricing.py
